added subscribe section

--- a/flower.html
+++ b/flower.html
@@ -13,6 +13,8 @@
     <header class="header">
         <nav class="navbar display-flex">
             <img class="logo" src="./assets/logo.png" alt="Shop logo is here">
+
+            <!-- here is some problem what i need to solve later -->
             <ul class="item-cart-container display-flex">
                 <div class="nav-items display-flex">
                     <li class="nav-item dark1 font-bold">Home</li>
@@ -117,6 +119,29 @@
                 </div>
             </div>
         </section>
+
+        <!-- Latest Deals section here  -->
+         <!-- <section class="deals-container">
+            <h3 class="section-title text-center font-noto">Latest Deals</h3>
+            <p class="section-description text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+            <div class="deals-offer-container">
+                <div class="deal-1 deal-box"></div>
+                <div class="deal-2 deal-box"></div>
+                <div class="deal-2 deal-box"></div>
+            </div>
+         </section> -->
+
+         <!-- join section here -->
+          <section class="subscribe-section">
+            <div class="overlay">
+                <h1 class="font-noto text-center">Join the Colorful Bunch</h1>
+                <form class="subscribe-form display-flex">
+                    <input class="font-inter"  type="email" placeholder="Write Email">
+                    <button class="font-inter" type="button">Subscribe</button>
+                </form>
+            </div>
+          </section>
     </main>
 </body>
 </html>
