--- a/flower.html
+++ b/flower.html
@@ -15,24 +15,24 @@
             <img class="logo" src="./assets/logo.png" alt="Shop logo is here">
 
             <!-- here is some problem what i need to solve later -->
-            <ul class="item-cart-container display-flex">
-                <div class="nav-items display-flex">
+            <div class="item-cart-container display-flex">
+                <ul class="nav-items display-flex">
                     <li class="nav-item dark1 font-bold">Home</li>
                     <li class="nav-item gray">Shop</li>
                     <li class="nav-item gray">About Us</li>
-                </div>
-                <div class="cart">
+                </ul>
+                <ul class="cart">
                     <!-- <i class="fa-solid fa-cart-shopping"></i> -->
                     <li class="cart-item "><span class=" fa-solid fa-cart-shopping "></span> Cart ($56)</li>
-                </div>
-            </ul>
+                </ul>
+            </div>
         </nav>
         <div class="banner display-flex">
                 <div class="banner-text-container">
                     <h1 class="section-title font-noto">ALWAYS <span class="primary-color"> FRESH FLOWERS</span></h1>
                     <p class="section-description gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
                 </div>
-                <div>
+                <div class="banner-img">
                     <img src="./assets/hero-flower.png" alt="">
                 </div>
         </div>
@@ -143,5 +143,39 @@
             </div>
           </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-part">
+                <img src="./assets/logo.png" alt="">
+                <p class="section-description gray">Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+            </div>
+            <div class="footer-part">
+                <ul>
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Blog</li>
+                    <li>FAQ</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="footer-part">
+                <ul>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Privacy</li>
+                    <li>Terms of Service</li>
+                    <li>Help Center</li>
+                </ul>
+            </div>
+            <div class="footer-part social-icons display-flex">
+                <div class="social-icon"> <img src="./assets/icon-linkedin.png" alt=""></div>
+                <div class="social-icon"><img  src="./assets/icon-twitter.png" alt=""></div>
+                <div class="social-icon"><img src="./assets/icon-facebook.png" alt=""></div>
+                <div class="social-icon"><img src="./assets/icon-youtube.png" alt=""></div>  
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
