--- a/flower.html
+++ b/flower.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Faugei Flower Shop</title>
     <link rel="stylesheet" href="./flower.css">
     <!-- tailwind css file -->
@@ -121,16 +121,28 @@
         </section>
 
         <!-- Latest Deals section here  -->
-         <!-- <section class="deals-container">
-            <h3 class="section-title text-center font-noto">Latest Deals</h3>
-            <p class="section-description text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+         <section class="deals-container">
+            <h3 class="section-title text-center font-noto"> <span class="primary-color">Latest</span> Deals</h3>
+            <p class="section-description text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
             <div class="deals-offer-container">
-                <div class="deal-1 deal-box"></div>
-                <div class="deal-2 deal-box"></div>
-                <div class="deal-2 deal-box"></div>
+               <div class="deal-content">
+                    <div class="deal-1 display-flex">
+                        <h5 class="deal-title font-noto">60% Off | Bloom Plant</h5>
+                        <a class="shop-btn" href="#">Shop Now</a>
+                    </div>
+                    <div class="deal-2 display-flex">
+                        <h5 class="deal-title font-noto">30% Off | Anna Plant</h5>
+                        <a class="shop-btn" href="#">Shop Now</a>
+                    </div>
+               </div>
+                <div class="deal-content2 deal-3 display-flex">
+                        <h5 class="deal-title font-noto">25% Off | Zabo Plant</h5>
+                        <a class="shop-btn" href="#">Shop Now</a>
+                </div>
             </div>
-         </section> -->
+         </section>
+
 
          <!-- join section here -->
           <section class="subscribe-section">
