set media query for 768px

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="footer-container">
             <div class="footer-part">
                 <img src="./assets/logo.png" alt="">
-                <p class="section-description gray">Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+                <p class="footer-description gray">Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
             </div>
             <div class="footer-part">
                 <ul>
